--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 <!-- === /EVENT-EINSCHUB === -->
 
       
-   <!-- === Rückblick: Gespräch mit Dr. Nina Scheer (Lazy YouTube) === -->
+  <!-- === Rückblick: Gespräch mit Dr. Nina Scheer (Lazy YouTube) === -->
 <section class="card" style="border-left:6px solid #0a7d32; padding:22px 22px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
   <h2 style="margin-top:0;">Jetzt ansehen: Gespräch mit Dr. Nina Scheer (SPD)</h2>
 
@@ -550,16 +550,16 @@
   </p>
 
   <!-- Lazy-YouTube: lädt erst beim Klick -->
-  <div class="video-wrap yt-lazy" data-ytid="3gfFihpfzHo" aria-label="YouTube: Gespräch mit Dr. Nina Scheer">
+  <div class="video-wrap yt-lazy" data-ytid="teqTU9uoRqw" aria-label="YouTube: Gespräch mit Dr. Nina Scheer">
     <button class="yt-play" type="button" aria-label="Video abspielen">
       <span class="yt-badge">LMdE TV</span>
-      <img src="https://i.ytimg.com/vi/3gfFihpfzHo/hqdefault.jpg" loading="lazy"
+      <img src="https://i.ytimg.com/vi/teqTU9uoRqw/hqdefault.jpg" loading="lazy"
            alt="Vorschaubild – Gespräch mit Dr. Nina Scheer">
       <span class="yt-icon" aria-hidden="true"></span>
       <div class="yt-caption">🎥 Jetzt ansehen auf YouTube</div>
     </button>
     <noscript>
-      <p><a class="cta secondary" href="https://youtu.be/3gfFihpfzHo" target="_blank" rel="noopener">
+      <p><a class="cta secondary" href="https://www.youtube.com/watch?v=teqTU9uoRqw" target="_blank" rel="noopener">
         Video auf YouTube öffnen
       </a></p>
     </noscript>
@@ -849,6 +849,7 @@
   
 </body>
 </html>
+
 
 
 
