--- a/pureswitch-kontakt.html
+++ b/pureswitch-kontakt.html
@@ -240,7 +240,7 @@
         <div class="intro">
           <div class="intro-logo">
             <!-- Logo-Datei ggf. anpassen -->
-            <img src="assets/pureSwitch-logo.png"
+            <img src="assets/pureSwitch-logonachruestung.png"
                  alt="pureSwitch – Speichernachrüstung">
           </div>
           <div class="intro-text">
