--- a/pureswitch-kontakt.html
+++ b/pureswitch-kontakt.html
@@ -228,8 +228,8 @@
 <body>
   <div class="page">
     <header class="site-header middle">
-      <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
-        <img src="assets/logo.png" alt="Solarstrom statt Erdgas-Strom – Logo" loading="lazy" decoding="async">
+      <a class="logo" href="https://www.aktionsolarstrom.de/pureswitch-kontakt.html" aria-label="Kontaktformular">
+        <img src="assets/pureSwitch solo.png" alt="pureSwitch – Logo" loading="lazy" decoding="async">
       </a>
       <h1>pureSwitch – Speichernachrüstung</h1>
       <p class="tagline">Kontaktformular für Endkund:innen und Solarteur:innen</p>
