--- a/pureswitch-kontakt.html
+++ b/pureswitch-kontakt.html
@@ -229,7 +229,7 @@
   <div class="page">
     <header class="site-header middle">
       <a class="logo" href="https://www.aktionsolarstrom.de/pureswitch-kontakt.html" aria-label="Kontaktformular">
-        <img src="assets/pureSwitch solo.png" alt="pureSwitch – Logo" loading="lazy" decoding="async">
+        <img src="assets/pureSwitch_white_solo.png" alt="pureSwitch – Logo" loading="lazy" decoding="async">
       </a>
       <h1>pureSwitch – Speichernachrüstung</h1>
       <p class="tagline">Kontaktformular für Endkund:innen und Solarteur:innen</p>
