--- a/pureswitch-kontakt.html
+++ b/pureswitch-kontakt.html
@@ -329,7 +329,7 @@
     <footer class="site-footer middle">
       <nav class="legal">
         <a href="https://www.aktionsolarstrom.de/">Zur Startseite</a> ·
-        <a href="Impressum.html">Impressum</a> ·
+        <a href="https://pure-energien.com/impressum/">Impressum</a> ·
         <a href="Datenschutz.html">Datenschutz</a>
       </nav>
       <p>© Kampagne „Solarstrom statt Erdgas-Strom”</p>
