--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -239,8 +239,8 @@
 <body>
   <div class="page">
     <header class="site-header middle">
-      <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
-        <img src="assets/logo.png" alt="Solarstrom statt Erdgas-Strom - Logo" loading="lazy" decoding="async">
+      <a class="logo" href="https://www.energiekostentausch.com/" aria-label="Zur Startseite">
+        <img src="assets/pureSwitch_white_solo.png" alt="pureSwitch - Logo" loading="lazy" decoding="async">
       </a>
       <h1>Energiekostentausch jetzt</h1>
       <p class="tagline">Eigene PV-Anlage und Stromspeicher statt steigender Stromkosten</p>
