--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -371,11 +371,11 @@
 
     <footer class="site-footer middle">
       <nav class="legal">
-        <a href="https://www.aktionsolarstrom.de/">Zur Startseite</a> ·
-        <a href="Impressum.html">Impressum</a> ·
+        <a href="https://www.energiekostentausch.com">Zur Startseite</a> ·
+        <a href="https://pure-energien.com/impressum/">Impressum</a> ·
         <a href="Datenschutz.html">Datenschutz</a>
       </nav>
-      <p>© Kampagne "Solarstrom statt Erdgas-Strom"</p>
+      <p>© Energiekostentausch - Pure Energien"</p>
     </footer>
   </div>
 
