--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -375,7 +375,7 @@
         <a href="https://pure-energien.com/impressum/">Impressum</a> ·
         <a href="Datenschutz.html">Datenschutz</a>
       </nav>
-      <p>© Energiekostentausch - Pure Energien"</p>
+      <p>© Energiekostentausch - Pure Energien</p>
     </footer>
   </div>
 
