--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -251,7 +251,7 @@
         <div class="intro">
           <div class="intro-logo">
             <!-- hier später das Pure-Energien Logo oder Energiekostentausch-Grafik einfügen -->
-            <img src="assets/pure-energien-logo.png" alt="Pure Energien - Logo">
+            <img src="assets/pure-energien-logo.jpg" alt="Pure Energien - Logo">
           </div>
           <div class="intro-text">
             <h2 id="ekt-kontakt">Energiekostentausch von Pure Energien</h2>
