--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -254,9 +254,9 @@
             <img src="assets/pure-energien-logo.jpg" alt="Pure Energien - Logo">
           </div>
           <div class="intro-text">
-            <h2 id="ekt-kontakt">Energiekostentausch von Pure Energien</h2>
+            <h2 id="ekt-kontakt">Steigende Strompreise,</h2>
 
-            <p>Steigende Strompreise, unsichere Tarife und immer höhere Abschläge - viele Haushalte zahlen Monat für Monat an den Energieversorger, ohne dauerhaft etwas davon zu haben.</p>
+            <p>unsichere Tarife und immer höhere Abschläge - viele Haushalte zahlen Monat für Monat an den Energieversorger, ohne dauerhaft etwas davon zu haben.</p>
 
             <p>Mit dem Energiekostentausch von Pure Energien können Sie einen anderen Weg gehen:</p>
             <ul>
