--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -282,7 +282,7 @@
           <p><strong>Mehr dazu in dieser YouTube-Sendung von "Leben mit der Energiewende TV".</strong></p>
           <p>In dieser YouTube-Sendung wird das Prinzip des Energiekostentauschs ausführlich und transparent mit Beispielen und Hintergründen erläutert und es gibt Antworten auf häufige Fragen.</p>
           <!-- YouTube-Link bitte mit der echten URL ersetzen -->
-          <a class="yt-link" href="https://www.youtube.com/watch?v=DEINE_VIDEO_ID" target="_blank" rel="noopener">
+          <a class="yt-link" href="https://youtu.be/1yJn9GKrp4E" target="_blank" rel="noopener">
             Jetzt Sendung ansehen
           </a>
         </div>
