--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -261,7 +261,7 @@
 <body>
   <div class="page">
     <header class="site-header middle">
-      <a class="logo" href="https://www.energiekostentausch.com/" aria-label="Zur Startseite">
+      <a class="logo" href="energiekostentausch.com" aria-label="Zur Startseite">
         <img src="assets/pureSwitch_EKT_weiss.png" alt="pureSwitch - Logo" loading="lazy" decoding="async">
       </a>
       <h1>Energiekostentausch jetzt</h1>
@@ -404,7 +404,7 @@
 
     <footer class="site-footer middle">
       <nav class="legal">
-        <a href="https://www.energiekostentausch.com">Zur Startseite</a> ·
+        <a href="energiekostentausch.com">Zur Startseite</a> ·
         <a href="https://pure-energien.com/impressum/">Impressum</a> ·
         <a href="Datenschutz.html">Datenschutz</a>
       </nav>
