--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -255,6 +255,13 @@
   height: 100%;
   border: 0;
 }
+@media (max-width: 768px){
+  img.center-mobile{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+  }
+}
 
   </style>
 </head>
