--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -279,9 +279,9 @@
       <section class="card" aria-labelledby="ekt-kontakt">
         <div class="intro">
           <div class="intro-logo">
-            <!-- hier später das Pure-Energien Logo oder Energiekostentausch-Grafik einfügen -->
-            <img src="assets/pure-energien-logo.png" alt="Pure Energien - Logo">
-          </div>
+  <!-- hier später das Pure-Energien Logo oder Energiekostentausch-Grafik einfügen -->
+  <img src="assets/pure-energien-logo.png" alt="Pure Energien - Logo" class="center-mobile">
+</div>
           <div class="intro-text">
             <h2 id="ekt-kontakt">Steigende Strompreise,</h2>
 
