--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -255,13 +255,33 @@
   height: 100%;
   border: 0;
 }
-@media (max-width: 768px){
+@media (max-width: 640px){
+  .grid2{
+    grid-template-columns:1fr;
+  }
+
+  .intro{
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .intro-logo{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 8px;
+  }
+
   img.center-mobile{
     display:block;
-    margin-left:auto;
-    margin-right:auto;
+    margin:0 auto 12px auto;
+  }
+
+  .intro-text{
+    width: 100%;
   }
 }
+
 
   </style>
 </head>
