--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -262,8 +262,7 @@
 
   .intro{
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    align-items: flex-start;
   }
 
   .intro-logo{
@@ -273,7 +272,7 @@
   }
 
   img.center-mobile{
-    display:block;
+    display:inline-block;
     margin:0 auto 12px auto;
   }
 
