--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -140,44 +140,125 @@
         </p>
 
         <h2>2. Datenschutz-Kontakt</h2>
-        <p>Für Fragen zum Datenschutz kontaktiere uns bitte unter <a href="mailto:mucmib@googlemail.com">mucmib@googlemail.com</a>.</p>
+<p>Für Fragen zum Datenschutz kontaktiere uns bitte unter
+  <a href="mailto:mucmib@googlemail.com">mucmib@googlemail.com</a>.
+</p>
 
-        <h2>3. Zweck der Datenverarbeitung, Rechtsgrundlagen</h2>
-        <p>Wir verarbeiten die von dir eingegebenen personenbezogenen Daten ausschließlich, um deinen Brief im Rahmen der Kampagne „Solarstrom statt Erdgas-Strom“ auszudrucken, zu kuvertieren und <strong>physisch</strong> an die zuständige Bundestagsabgeordnete zu versenden. Außerdem nutzen wir deine E-Mail für Rückfragen und – wenn gewünscht – für eine Kopie deines Briefs.</p>
-        <ul>
-          <li><strong>Art. 6 Abs. 1 lit. a DSGVO:</strong> Einwilligung (z. B. Versand des Briefs in deinem Namen).</li>
-          <li><strong>Art. 6 Abs. 1 lit. f DSGVO:</strong> Berechtigtes Interesse (z. B. Missbrauchserkennung, Betrieb & Sicherheit der Systeme).</li>
-        </ul>
+<h2>3. Zweck der Datenverarbeitung und Rechtsgrundlagen</h2>
 
-        <h2>4. Verarbeitete Daten</h2>
-        <ul>
-          <li>Vor- und Nachname, Anschrift, PLZ/Ort</li>
-          <li>E-Mail-Adresse</li>
-          <li>Briefinhalte (Betreff, Nachrichtentext)</li>
-          <li>PLZ/Ort zur Zuordnung der Abgeordneten</li>
-          <li>Prozessdaten (Vorgangs-ID, Datum, technische Protokolle)</li>
-        </ul>
+<p>Wir verarbeiten personenbezogene Daten auf dieser Seite ausschließlich zu folgenden Zwecken:</p>
 
-        <h2>5. Empfänger</h2>
-        <ul>
-          <li><strong>Brevo (Sendinblue SAS)</strong> – Versand transaktionaler E-Mails (Sitz: Frankreich/EU)</li>
-          <li><strong>Vercel Inc.</strong> – Hosting/Serverless-Ausführung (Sitz: USA)</li>
-          <li><strong>Postdienstleister</strong> – physischer Versand deines Briefs</li>
-          <li><strong>Unser Team</strong> – ausschließlich für Druck & Versand</li>
-        </ul>
+<ul>
+  <li>
+    <strong>a) Briefformular „Solarstrom statt Erdgas-Strom“</strong><br>
+    Die von dir eingegebenen Daten werden genutzt, um deinen Brief im Rahmen der
+    Kampagne „Solarstrom statt Erdgas-Strom“ auszudrucken, zu kuvertieren und
+    <strong>physisch</strong> an die zuständige Bundestagsabgeordnete zu versenden.
+    Außerdem nutzen wir deine E-Mail-Adresse für Rückfragen und – wenn gewünscht –
+    für eine Kopie deines Briefs.
+  </li>
+  <li>
+    <strong>b) Kontaktformular „pureSwitch – Speichernachrüstung“</strong><br>
+    Die hier eingegebenen Daten (z.&nbsp;B. Kontaktdaten, Rolle als Endkunde oder
+    Solarteur, Kurzbeschreibung des Anliegens) werden genutzt, um deine Anfrage
+    aufzunehmen und an <strong>Pure Energien</strong> sowie – bei Endkund:innen –
+    an einen passenden Solarteur in deiner Region weiterzuleiten. Zweck ist die
+    Kontaktaufnahme, Beratung und ggf. Vorbereitung eines Angebots zur
+    Speichernachrüstung.
+  </li>
+  <li>
+    <strong>c) Kontaktformular „Energiekostentausch“</strong><br>
+    Die hier eingegebenen Daten (z.&nbsp;B. Kontaktdaten, optional Angaben zu
+    Stromverbrauch und Abschlagskosten) werden genutzt, um deine Anfrage
+    aufzunehmen und an <strong>Pure Energien</strong> weiterzugeben. Zweck ist die
+    Kontaktaufnahme, Prüfung deiner Ausgangssituation und die Erstellung eines
+    unverbindlichen Angebots zum Energiekostentausch.
+  </li>
+</ul>
 
-        <h2>6. Speicherdauer</h2>
-        <p>Wir speichern deine Daten nur so lange, wie es für die Abwicklung des Postversands und für einen kurzen Nachweiszeitraum (ca. 90 Tage) erforderlich ist. Danach werden sie gelöscht oder anonymisiert, soweit keine gesetzlichen Aufbewahrungspflichten entgegenstehen.</p>
+<p>Rechtsgrundlagen der Verarbeitung sind:</p>
+<ul>
+  <li><strong>Art. 6 Abs. 1 lit. a DSGVO (Einwilligung)</strong> – für den Versand deines
+    Briefs in deinem Namen sowie für die Weitergabe deiner Kontaktdaten an
+    Pure Energien bzw. einen Solarteur im Rahmen der beiden Kontaktformulare.</li>
+  <li><strong>Art. 6 Abs. 1 lit. b DSGVO (Vertrag / vorvertragliche Maßnahmen)</strong> –
+    soweit deine Anfrage auf die Anbahnung eines Vertrags mit Pure Energien oder
+    einem Solarteur gerichtet ist (z.&nbsp;B. Angebot für PV-Anlage / Speicher /
+    Energiekostentausch).</li>
+  <li><strong>Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse)</strong> – für die
+    technische Bereitstellung der Website, Missbrauchserkennung, Protokollierung
+    technischer Vorgänge und die Sicherstellung eines stabilen und sicheren Betriebs.
+  </li>
+</ul>
 
-        <h2>7. Rechte</h2>
-        <p>Du hast nach DSGVO das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit und Widerspruch. Außerdem das Recht, erteilte Einwilligungen jederzeit zu widerrufen. Wende dich dazu an <a href="mailto:mucmib@googlemail.com">mucmib@googlemail.com</a>. Zudem besteht ein Beschwerderecht bei einer Datenschutzaufsichtsbehörde.</p>
+<h2>4. Verarbeitete Daten</h2>
+<p>Je nach Formular können insbesondere folgende Daten verarbeitet werden:</p>
+<ul>
+  <li>Vor- und Nachname</li>
+  <li>Anschrift, PLZ/Ort (bei Briefformular und sofern im Kontaktformular angegeben)</li>
+  <li>E-Mail-Adresse, Telefonnummer (soweit angegeben)</li>
+  <li>Briefinhalte (Betreff, Nachrichtentext) im Rahmen der Kampagne an Bundestagsabgeordnete</li>
+  <li>Rolle (Endkunde / Solarteur) bei pureSwitch-Anfragen</li>
+  <li>Optionale Angaben zum Stromverbrauch, zu Abschlagszahlungen und zur
+      Haussituation im Formular „Energiekostentausch“</li>
+  <li>Prozess- und Systemdaten (Vorgangs-ID, Datum/Uhrzeit, Logfiles, IP-Adresse,
+      technische Protokolle zur Sicherstellung des Betriebs)</li>
+</ul>
 
-        <h2>8. Sicherheit & Cookies</h2>
-        <ul>
-          <li>Unsere Seite wird verschlüsselt über TLS/HTTPS ausgeliefert.</li>
-          <li>Es werden nur technisch notwendige Cookies eingesetzt; kein Drittanbieter-Tracking.</li>
-          <li>Zum Schutz vor Missbrauch können wir Captcha- oder Rate-Limit-Mechanismen einsetzen.</li>
-        </ul>
+<h2>5. Empfänger</h2>
+<ul>
+  <li><strong>Brevo (Sendinblue SAS)</strong> – Versand transaktionaler E-Mails
+    (z.&nbsp;B. Eingangsbestätigungen, Weiterleitung von Formularinhalten; Sitz: Frankreich/EU)</li>
+  <li><strong>Vercel Inc.</strong> – Hosting und Serverless-Ausführung dieser Website
+    (Sitz: USA; Datentransfer erfolgt auf Basis der von Vercel bereitgestellten
+    EU-Standardvertragsklauseln)</li>
+  <li><strong>Postdienstleister</strong> – physischer Versand deines Briefs an die
+    Bundestagsabgeordnete (nur beim Briefformular)</li>
+  <li><strong>Pure Energien</strong> – Bearbeitung deiner Anfrage im Rahmen der
+    Kontaktformulare „pureSwitch“ und „Energiekostentausch“</li>
+  <li><strong>Regionale Solarteur:innen</strong> – nur bei pureSwitch-Anfragen von
+    Endkund:innen, wenn zur Bearbeitung deiner Anfrage ein Kontakt vor Ort sinnvoll
+    ist und du in die Weitergabe eingewilligt hast</li>
+  <li><strong>Unser Kampagnen-Team</strong> – ausschließlich zur Bearbeitung der
+    jeweiligen Vorgänge, zur Kommunikation mit dir und zur technischen
+    Administration der Systeme</li>
+</ul>
+
+<h2>6. Speicherdauer</h2>
+<ul>
+  <li><strong>Briefformular „Solarstrom statt Erdgas-Strom“:</strong>
+    Die Daten werden nur so lange gespeichert, wie es für die Abwicklung des
+    Postversands und für einen kurzen Nachweiszeitraum (ca. 90 Tage) erforderlich
+    ist. Danach werden sie gelöscht oder anonymisiert, soweit keine gesetzlichen
+    Aufbewahrungspflichten entgegenstehen.</li>
+  <li><strong>Kontaktformulare „pureSwitch“ und „Energiekostentausch“:</strong>
+    Die Daten werden so lange gespeichert, wie sie für die Bearbeitung deiner Anfrage,
+    etwaige Rückfragen und die Vorbereitung bzw. Dokumentation eines Angebots
+    erforderlich sind. Regelmäßig werden Anfragen, die nicht zu einem Vertragsabschluss
+    führen, spätestens nach 24 Monaten gelöscht oder anonymisiert, soweit keine
+    gesetzlichen Aufbewahrungspflichten entgegenstehen.</li>
+</ul>
+
+<h2>7. Deine Rechte</h2>
+<p>Du hast nach DSGVO das Recht auf Auskunft, Berichtigung, Löschung,
+Einschränkung der Verarbeitung, Datenübertragbarkeit und Widerspruch.
+Außerdem hast du das Recht, erteilte Einwilligungen jederzeit mit Wirkung
+für die Zukunft zu widerrufen.</p>
+<p>Wende dich dazu an
+  <a href="mailto:mucmib@googlemail.com">mucmib@googlemail.com</a>.
+  Zudem besteht ein Beschwerderecht bei einer Datenschutzaufsichtsbehörde.
+</p>
+
+<h2>8. Sicherheit & Cookies</h2>
+<ul>
+  <li>Unsere Seite wird verschlüsselt über TLS/HTTPS ausgeliefert, sofern dein
+      Browser und deine Verbindung dies unterstützen.</li>
+  <li>Es werden nur technisch notwendige Cookies eingesetzt; kein
+      Drittanbieter-Tracking zu Werbezwecken.</li>
+  <li>Zum Schutz vor Missbrauch können wir Captcha- oder Rate-Limit-Mechanismen
+      einsetzen (z.&nbsp;B. um automatisierte Massenanfragen zu verhindern).</li>
+</ul>
+
 
         <h2>9. Änderungen</h2>
         <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, wenn sich gesetzliche Vorgaben oder technische Änderungen ergeben. Die jeweils aktuelle Version ist immer hier abrufbar.</p>
@@ -234,6 +315,7 @@
   </script>
 </body>
 </html>
+
 
 
 
