--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -234,6 +234,19 @@
     footer a:hover{
       text-decoration:underline;
     }
+
+.flyer-bottom{
+  margin-top: 18px;
+  text-align: center;
+}
+
+.flyer-bottom img{
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+  box-shadow: 0 6px 18px rgba(0,0,0,.18);
+}
+    
     .video-wrap{
   margin-top: 12px;
 }
@@ -424,6 +437,13 @@
           <p class="footnote">
             Hinweis: Dieses Formular stellt noch keinen Auftrag dar. Pure Energien nimmt Kontakt mit Ihnen auf und bespricht alle Details in Ruhe mit Ihnen.
           </p>
+
+<div class="flyer-bottom">
+  <img src="assets/Flyer_Rueckseite_3.tiff"
+       alt="Flyer Energiekostentausch – Rückseite">
+</div>
+
+          
         </form>
       </section>
     </main>
