--- a/energiekostentausch.html
+++ b/energiekostentausch.html
@@ -439,7 +439,7 @@
           </p>
 
 <div class="flyer-bottom">
-  <img src="assets/Flyer_Rueckseite_3.tiff"
+  <img src="assets/Flyer_Rueckseite_3.jpg"
        alt="Flyer Energiekostentausch – Rückseite">
 </div>
 
