--- a/index.html
+++ b/index.html
@@ -483,6 +483,69 @@
         </div>
       </section>
 
+      <!-- === EVENT-EINSCHUB: LmE 1485 – Netzpaket (17.02.2026) === -->
+<section id="event-netzpaket-sendung" class="card reveal" style="border-left:6px solid #0a7c5b;">
+  <h2 style="margin:0 0 6px;">Leben mit der Energiewende – 1485. Sendung vom 17.02.2026</h2>
+
+  <p style="margin:0 0 12px;">
+    <strong>NETZPAKET: WIRTSCHAFT KAPUTT - BÜRGER ZAHLEN DIE ZECHE</strong><br>
+    <span style="opacity:.85; font-size:.95rem;">(Diese Sendung wird finanziell vom VEEG e.V. unterstützt.)</span>
+  </p>
+
+  <!-- Lazy YouTube -->
+  <div class="video-wrap yt-lazy"
+       data-youtube-id="EhXTxk16xBI"
+       data-youtube-title="NETZPAKET: WIRTSCHAFT KAPUTT - BÜRGER ZAHLEN DIE ZECHE"
+       aria-label="YouTube-Video: Netzpaket – Klick zum Abspielen">
+    <button class="yt-play" type="button" aria-label="Video abspielen"></button>
+    <noscript>
+      <p style="padding:12px; color:#fff;">
+        JavaScript ist deaktiviert. Video hier ansehen:
+        <a href="https://youtu.be/EhXTxk16xBI?si=hSiDDZXqnEw3Ijgh" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">
+          YouTube öffnen
+        </a>
+      </p>
+    </noscript>
+  </div>
+
+  <p style="margin:10px 0 0;">
+    <a class="cta secondary" href="https://youtu.be/EhXTxk16xBI?si=hSiDDZXqnEw3Ijgh" target="_blank" rel="noopener">
+      Auf YouTube ansehen
+    </a>
+  </p>
+
+  <div style="margin-top:14px; line-height:1.6;">
+    <p>
+      Bundeswirtschaftsministerin Katherina Reiche treibt mit dem „Netzpaket“ eine Politik voran, die den Ausbau der Erneuerbaren nicht beschleunigt – sondern ausbremst, verunsichert und wirtschaftlich unkalkulierbar macht. Ein durchgesickerter Referentenentwurf zeigt: Wenn Netzbetreiber künftig großflächig „kapazitätslimitierte Netzgebiete“ ausweisen können, wenn Redispatch ohne Entschädigung droht und zusätzlich unkalkulierbare Baukostenzuschüsse verlangt werden dürfen, dann wird aus der Energiewende ein Investitionsrisiko – und aus Planbarkeit ein Glücksspiel.
+    </p>
+
+    <p>
+      Besonders brisant: Diese Baukostenzuschüsse könnten nicht nur Großprojekte treffen, sondern auch kleine Anlagen – also Photovoltaik auf dem Eigenheim, Speicher, Gewerbedächer. Im Entwurf ist keine klare Bagatellgrenze erkennbar. Wer heute sagt „Mein Dach betrifft das nicht“, könnte morgen feststellen: Doch – und es wird teuer.
+    </p>
+
+    <p>
+      Die Folge: Investitionen werden gestoppt, Projekte nicht mehr kalkulierbar – und tausende Arbeitsplätze in Handwerk, Planung, Projektierung und Industrie geraten in Gefahr. Was in den letzten Jahren mühsam aufgebaut wurde, könnte durch politische Unsicherheit wieder zerstört werden.
+    </p>
+
+    <p style="margin-bottom:0;">
+      In dieser Sendung ordnen wir die zentralen Punkte des Entwurfs ein und sprechen über die Folgen für Solarteure, Projektierer, Mittelstand, Handwerk – und am Ende auch für Bürgerinnen und Bürger.
+    </p>
+  </div>
+
+  <!-- Strukturierte Daten (Video) -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"VideoObject",
+    "name":"Leben mit der Energiewende – 1485. Sendung: NETZPAKET: WIRTSCHAFT KAPUTT - BÜRGER ZAHLEN DIE ZECHE",
+    "uploadDate":"2025-02-17",
+    "thumbnailUrl":["https://i.ytimg.com/vi/EhXTxk16xBI/hqdefault.jpg"],
+    "embedUrl":"https://www.youtube-nocookie.com/embed/EhXTxk16xBI",
+    "url":"https://youtu.be/EhXTxk16xBI?si=hSiDDZXqnEw3Ijgh"
+  }
+  </script>
+</section>
+
 <!-- === EVENT-EINSCHUB: Roth 20.11.2025 === -->
 <section id="event-roth" class="card event-announcement reveal" style="border-left:6px solid #f6b10a;">
   <div class="event-grid">
@@ -849,6 +912,7 @@
   
 </body>
 </html>
+
 
 
 
