--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     <img src="https://i.ytimg.com/vi/EhXTxk16xBI/hqdefault.jpg"
          loading="lazy"
          decoding="async"
-         alt="Vorschaubild – Netzpaket: Wirtschaft kaputt, Bürger zahlen die Zeche">
+         alt="Vorschaubild – Netzpaket: Wirtschaft kaputt, Bürger/innen zahlen die Zeche">
     <span class="yt-icon" aria-hidden="true"></span>
     <div class="yt-caption">🎥 Jetzt ansehen auf YouTube</div>
   </button>
@@ -923,6 +923,7 @@
   
 </body>
 </html>
+
 
 
 
